[package]
name = "binder"
version = "0.1.0"
authors = ["sec <sec@uauth.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.14"
snafu = "0.6.10"
serde = {version = "1.0.118", features = ["derive"]}
curl = "0.4.34"
url = "2.2.0"
regex = "1"
lazy_static = "1.4.0"